--- a/src/main/resources/templates/studentHome.html
+++ b/src/main/resources/templates/studentHome.html
@@ -5,35 +5,13 @@
 	<!-- <link href ="@{/CSS/style.css}" rel ="stylesheet" type ="text/css"/> -->
 </head>
 <body>
-	<h2>User Information</h2>
-	<table cellpadding = "2" cellspacing = "2">
-		<tr>
-			<th>Name: </th>
-			<td><span th:text ="${student.name}" ></span></td>
-		</tr>
-		<tr>
-			<th>Username: </th>
-			<td><span th:text ="${student.username}" ></span></td>
-		</tr>
-		<tr>
-			<th>Gender: </th>
-			<td><span th:text ="${student.gender}" ></span></td>
-		</tr>
-		<tr>
-			<th>Email: </th>
-			<td><span th:text ="${student.email}" ></span></td>
-		</tr>
-		<tr>
-			<th>Password: </th>
-			<td><span th:text ="${student.password}" ></span></td>
-		</tr>		
-		<tr>
-			<th>Photo: </th>
-			<td>
-				<img th:src ="@{'/images/'+${student.pic}}" />
-			</td>
-		</tr>
-	</table>
+	<h2>home</h2>
+		 
+	<p><a th:href="@{'../studentProfile/' + ${student.username}}"><button>view profile</button></a></p>
+		
+	<p><a href="../viewCourses"><button>view courses</button></a></p>
+	
+	
 </body>
 </html>
 
