--- a/src/main/resources/templates/teacherHome.html
+++ b/src/main/resources/templates/teacherHome.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 	<h2>User Information</h2>
-	<table cellpadding = "2" cellspacing = "2">
+	
+	<table>
 		<tr>
 			<th>Name: </th>
 			<td><span th:text ="${teacher.name}" ></span></td>
@@ -34,6 +35,9 @@
 			</td>
 		</tr>
 	</table>
+	
+	<p><a href="viewCourses"><button>view courses</button></a></p>
+	
 </body>
 </html>
 
